# spotifuck

./: .env  Cargo.toml
src/: archive.rs  auth.rs  main.rs  routes.rs
static/css/: default.css  form.css  index.css  playlist.css  search.css  settings.css  upload.css  upload_res.css
static/script/: login.js  signin.js
templates/: index.html  login.html  playlist.html  search.html  settings.html  signin.html  upload.html  upload_res.html
