[package]
name = "spotifuck"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
bcrypt = "0.17.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
iars = "0.1.0"
lazy_static = "1.5.0"
reqwest = "0.12.22"
sanitize-filename = "0.6.0"
serde = "1.0.219"
serde_json = "1.0.141"
supabase_rs = "0.4.10"
tera = "1.20.0"
